--- a/build.gradle
+++ b/build.gradle
@@ -108,15 +108,20 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
-    // JPA & Data Access
+    // JPA & Data Access - Updated MongoDB dependency
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+
+    // Fixing MongoDB issue with correct driver version
+    implementation 'org.mongodb:mongodb-driver-sync:4.11.1'
 
     // OpenAPI Documentation
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
-    // GraphQL Support
-    implementation 'org.springframework.boot:spring-boot-starter-graphql'
+    // GraphQL Support (with WebFlux excluded)
+    implementation('org.springframework.boot:spring-boot-starter-graphql') {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-webflux'
+    }
 
     // Lombok
     compileOnly 'org.projectlombok:lombok:1.18.30'
@@ -124,7 +129,7 @@ dependencies {
 
     // Database Drivers
     runtimeOnly 'com.h2database:h2:2.2.224' // For testing/development
-    runtimeOnly 'org.postgresql:postgresql:42.7.1' // Optional: For PostgreSQL support
+    runtimeOnly 'org.postgresql:postgresql:42.7.4' // Optional: For PostgreSQL support
 
     // Apache POI (for Excel processing)
     implementation 'org.apache.poi:poi:5.2.3'
@@ -134,20 +139,23 @@ dependencies {
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.16.1'
     implementation 'org.apache.commons:commons-lang3:3.14.0'
     implementation 'commons-io:commons-io:2.15.1'
+    implementation 'com.networknt:json-schema-validator:1.0.86'
 
     // TypeList Generator
-    implementation 'com.bazarbozorg.typelist.generator:bazarbozorg-core:1.0-SNAPSHOT'
-    implementation fileTree(
-            dir: System.getProperty('user.home') + '/.m2/repository/com/bazarbozorg/typelist/generator/bazarbozorg-core/1.0-SNAPSHOT',
-            include: ['*-all.jar']
-    )
+    implementation 'com.bazarbozorg.typelist.generator:bazarbozorg-core:1.0-SNAPSHOT:all'
 
     // Testing Dependencies
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.mockito:mockito-junit-jupiter'
+
+    // Embedded MongoDB for testing - ensure it's compatible with your MongoDB driver
     testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.12.2'
-    testImplementation 'org.springframework.graphql:spring-graphql-test'
+
+    // GraphQL Testing
+    testImplementation('org.springframework.graphql:spring-graphql-test') {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-webflux'
+    }
 }
 
 // For Spring Boot applications, we can use bootJar instead of war
