--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,47 +1,40 @@
-server:
-  port: 8081
-  compression:
-    enabled: true  # ✅ Compress responses to improve performance
-    mime-types: application/json,application/xml,text/html,text/plain
-    min-response-size: 1024  # ✅ Compress responses larger than 1KB
-
-json:
-  schema:
-    path: classpath:schemas/type-list-schema.json  # ✅ Inside `src/main/resources/`
-  folder:
-    path: json_output  # ✅ Correctly references `json_output` in the project root
-
 spring:
   application:
     name: bazarbozorg
 
   main:
-    web-application-type: reactive
+    web-application-type: servlet
 
-  # ✅ Disable DevTools in production
-  devtools:
-    restart:
-      enabled: false  # ✅ Prevents auto-restart in production
-    livereload:
-      enabled: false  # ✅ Disables LiveReload
-    add-properties: false  # ✅ Prevents property modifications by DevTools
-
-  # ✅ MongoDB Production Configuration
   data:
     mongodb:
-      uri: mongodb://localhost:27017/bazarbozorg_dev  # ✅ Ensure this is defined
+      uri: mongodb://localhost:27017/bazarbozorg_dev
       authentication-database: admin
+      # Optional advanced settings if needed
+      # connection-pool:
+      #   min-size: 10
+      #   max-size: 100
+      # connect-timeout: 5000
+      # socket-timeout: 5000
 
-  mongodb:
-    min-pool-size: 10  # ✅ Increased for better scaling
-    max-pool-size: 100  # ✅ Increased for higher traffic
-    max-connections-per-host: 100  # ✅ Increased connection limit
-    min-connections-per-host: 10  # ✅ Maintain idle connections
-    connection-timeout: 5000  # ✅ Increased timeout (ms)
-    max-wait-time: 5000  # ✅ Allow more time for acquiring connections
-    max-connection-life-time: 3600000  # ✅ Increase max connection life (ms) (1 hr)
-    max-connection-idle-time: 900000  # ✅ Max idle time (ms) (15 min)
+  devtools:
+    restart:
+      enabled: false
+    livereload:
+      enabled: false
+    add-properties: false
 
+server:
+  port: 8081
+  compression:
+    enabled: true
+    mime-types: application/json,application/xml,text/html,text/plain
+    min-response-size: 1024
+
+json:
+  schema:
+    path: classpath:schemas/type-list-schema.json
+  folder:
+    path: json_output
 
 springdoc:
   api-docs:
@@ -50,3 +43,11 @@ springdoc:
     path: /swagger-ui.html
     operationsSorter: method
     tagsSorter: alpha
+
+debug: false
+
+logging:
+  level:
+    org.springframework.data.mongodb: DEBUG
+    org.mongodb.driver: DEBUG
+    com.bazarbozorg: INFO
